
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
Fly-Man- <fly.man.opensim@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Mar 26 - Greythane
* LocalGridConnector
  - if no valid data source is available, dont register the local service 
  	( causes null references if called from the sim console when in grid mode )
* SceneManager - Show region <name> command
  - correct call to get region list so that is operates correctly in both standalone and grid mode
  - Update formatting of displayed 'show users' command

* CommandConsole
  - Add 'cleaninfo' format to provide for nicer console messages if/when needed

* WarpTileRenderer
  - Rebuild with some optimisations and using customised Warp3D library (WhiteCore.Warp3D)
  	(requires new Warp3D.dll in bin folder)


Mar 25 - Greythane
* Scenemanager / FileBasedSimulationData
  - Re-work and correct new region creation as the current mods crash for grid mode operations.
  - add a final yes/no to proceed with the creation of the new region
* EstateInitializer
  - small change to prompt wording when creating a new estate
* Gridservice
  - Correct 'show region <name>' processing when used in grid mode
      

Mar 24 - Greythane
* Dropped Xml2 commands after further investigation, OAR's are a better alternative and it does not
    appear that the XML2 format is in common use with OpenSim anyway
* SceneManager 
    - Re-synced new Region commmads after a stuff up in doing so previously
    - Add port to 'Show regions' command
* FileBasedSimulationData
    - Correct some problems in the 'update region info' command


Mar 24 - Fly-Man
* Correction to server configuration files

Mar 22nd - Greythane
*  Corrected setting of default values when no regions exist at startup

Mar 21st - Greythane
* CommandConsole
  - Add 'missed that..' response for multi word commands
* Update prebuild.xml version # to 0.9
* PathHelpers
  - Add VerifyReadFile to shortcut a heap of file checks (reading config, xml etc)
* SceneManger